IE bug fix: do not overflow the drop-out menus with the featured thumbnail image.

--- a/css/expound.less
+++ b/css/expound.less
@@ -152,6 +152,8 @@ a {
 
 	ul {
 		margin: 0 30px;
+		position: relative;
+		z-index: 9990;
 	}
 
 	a {
